<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/snackbar_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="false"
  android:orientation="vertical">


  <android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.internal.ScrimInsetsFrameLayout
      android:id="@+id/content_frame"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true"
      android:orientation="vertical" />

    <RelativeLayout
      android:id="@+id/MainLayout"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical">

      <RelativeLayout
        android:id="@+id/FullscreenButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
          android:id="@+id/ElementsLayout"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:orientation="vertical">


          <ImageButton
            android:id="@+id/FullscreenControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="7dp"
            android:background="#DDFFFFFF"
            android:hint="@string/menu_exitfullscreen"
            android:src="@drawable/fullscreen_exit"
            android:visibility="invisible" />


          <Button
            android:id="@+id/button_backtotop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:alpha="0.6"
            android:background="#DDFFFFFF"
            android:gravity="center"
            android:text="@string/button_backtotop"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="invisible" />


          <LinearLayout
            android:id="@+id/tts_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
              android:id="@+id/button_pause_tts"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight=".5"
              android:alpha="0.6"
              android:background="#DDFFFFFF"
              android:gravity="center"
              android:text="@string/tts_pause"
              android:textColor="@android:color/black"
              android:textStyle="bold" />

            <Button
              android:id="@+id/button_stop_tts"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight=".5"
              android:alpha="0.6"
              android:background="#DDFFFFFF"
              android:gravity="center"
              android:text="@string/tts_stop"
              android:textColor="@android:color/black"
              android:textStyle="bold" />

          </LinearLayout>


        </RelativeLayout>

      </RelativeLayout>

    </RelativeLayout>

    <include layout="@layout/drawer_left" />

    <include layout="@layout/drawer_right" />

  </android.support.v4.widget.DrawerLayout>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize">

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:background="?colorPrimaryDark"
      app:popupTheme="@style/AppTheme.PopupOverlay"
      app:theme="@style/AppTheme.AppBarOverlay" />

    <org.kiwix.kiwixmobile.views.AnimatedProgressBar
      android:id="@+id/progress_view"
      android:layout_width="match_parent"
      android:layout_height="3dp"
      android:layout_alignParentBottom="true"
      app:backgroundColor="?attr/progressBackgroundColor"
      app:bidirectionalAnimate="false"
      app:progressColor="@color/accent" />

  </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>