...
      android:id="@+id/view"
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:background="?attr/dividerColor"/>

  <ListView
      android:id="@+id/left_drawer_list"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:choiceMode="singleChoice"
      android:divider="@null"
      android:dividerHeight="0dp"
...
          android:paddingRight="4dp"
          android:paddingTop="4dp"
          android:src="?attr/arrowBackDrawable"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/new_tab_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/listBackground"
        android:clickable="true">

...
