<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <string name="menu_zim_manager">Get Content</string>
  <string name="menu_help">Help</string>
  <string name="menu_home">Home</string>
  <string name="menu_forward">Forward</string>
  <string name="menu_back">Back</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_search">Search article</string>
  <string name="menu_searchintext">Find in page</string>
...
  <string name="tts_lang_not_supported">The language of this page is not supported, or appropriate language data was not installed. The article may not be properly read.</string>
  <string name="no_reader_application_installed">Could not find an installed application for this type of file</string>
  <string name="customapp_missing_content">Your application is corrupted.\nThis might happen when you remove files on the SD Card.\nYou need to uninstall then reinstall the App from the Play Store.</string>
  <string name="go_to_play_store">Go to Play Store</string>
  <string name="no_bookmarks">No Bookmarks</string>
  <string name="menu_bookmarks_list">Bookmarks</string>
  <string name="no_section_info">No Content Headers Found</string>
  <string name="request_storage">To access offline content we need access to your storage</string>
  <string name="request_storage_custom">If you see a screen overlay warning simply restart your device to fix.</string>
  <string name="clear_recent_history_dialog">Are you sure you want to delete your search history?</string>
  <string name="clear_recent_and_tabs_history_dialog">Are you sure you want to delete your search history and reset all active tabs?</string>
  <string name="delete_recent_search_item">Delete this item?</string>
  <string name="pref_clear_all_history_title">Clear history</string>
...
